--- a/src/index.css
+++ b/src/index.css
@@ -2,24 +2,24 @@
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
-  color-scheme: light; /* Forzamos el esquema claro */
-  color: #333333; /* Texto principal oscuro (negro suave) */
+  color-scheme: light; 
+  color: #333333; 
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 
-  background-color: #FFFFFF; /* Fondo principal blanco */
+  background-color: #FFFFFF; 
 }
 
 a {
   font-weight: 500;
-  color: #0051BA; /* Azul IKEA para enlaces */
-  text-decoration: none; /* Puedes mantener 'none' o 'underline' */
+  color: #0051BA; 
+  text-decoration: none; 
 }
 a:hover {
-  color: #003D8C; /* Azul IKEA más oscuro para hover */
+  color: #003D8C; 
 }
 
 body {
